--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "tip-jar-component",
+	"name": "@humblebots/tip-jar-component",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -10,36 +10,34 @@
 		"type": "git",
 		"url": "git+https://github.com/humblebots/tip-jar-component.git"
 	},
-	"author": "",
-	"license": "ISC",
+	"author": "Michael MacCallum",
 	"bugs": {
 		"url": "https://github.com/humblebots/tip-jar-component/issues"
 	},
 	"homepage": "https://github.com/humblebots/tip-jar-component#readme",
-	"peerDependencies": {
-		"@types/react": "^16.9.2",
-		"@types/react-native": "^0.60.5",
-		"@types/react-navigation": "3.4.0",
-		"react": "16.9.0",
-		"react-native": "0.61.5",
-		"react-native-gesture-handler": "1.5.2",
-		"react-native-safe-area-context": "0.6.2",
-		"react-native-safe-area-view": "1.0.0",
-		"react-navigation": "4.0.10",
-		"react-navigation-header-buttons": "3.0.4",
-		"react-navigation-stack": "2.0.15"
-	},
+	"peerDependencies": {},
 	"dependencies": {
-		"lottie-ios": "3.1.3",
-		"lottie-react-native": "3.3.2",
-		"react-native-iap": "4.4.0",
-		"yarn": "1.21.1"
+		"@types/react": "^16.9.25",
+		"@types/react-native": "^0.61.23",
+		"@types/react-navigation": "^3.4.0",
+		"lottie-ios": "^3.1.3",
+		"lottie-react-native": "^3.3.2",
+		"react": "^16.13.1",
+		"react-native": "^0.61.5",
+		"react-native-gesture-handler": "^1.6.1",
+		"react-native-iap": "^4.4.0",
+		"react-native-safe-area-context": "^0.7.3",
+		"react-native-safe-area-view": "^1.0.0",
+		"react-navigation": "^4.3.3",
+		"react-navigation-header-buttons": "^3.0.5",
+		"react-navigation-stack": "^2.3.6",
+		"yarn": "^1.21.1"
 	},
 	"devDependencies": {
-		"@babel/core": "7.8.3",
-		"@babel/runtime": "7.8.3",
-		"@react-native-community/eslint-config": "0.0.6",
-		"eslint": "6.8.0",
-		"metro-react-native-babel-preset": "0.58.0"
+		"@babel/core": "^7.8.3",
+		"@babel/runtime": "^7.8.3",
+		"@react-native-community/eslint-config": "^0.0.6",
+		"eslint": "^6.8.0",
+		"metro-react-native-babel-preset": "^0.58.0"
 	}
 }
