--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.1",
 	"private": false,
 	"description": "",
-	"main": "index.js",
+	"main": "index.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
