--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@humblebots/tip-jar-component",
-	"version": "1.0.3",
+	"version": "1.0.4",
 	"private": false,
 	"description": "",
 	"main": "index.ts",
@@ -16,20 +16,23 @@
 		"url": "https://github.com/humblebots/tip-jar-component/issues"
 	},
 	"homepage": "https://github.com/humblebots/tip-jar-component#readme",
-	"peerDependencies": {},
+	"peerDependencies": {
+		"react": "^16.13.1",
+		"react-native": "^0.61.5"
+	},
 	"dependencies": {
 		"@types/react": "^16.9.25",
 		"@types/react-native": "^0.61.23",
 		"@types/react-navigation": "^3.4.0",
 		"lottie-ios": "^3.1.3",
 		"lottie-react-native": "^3.3.2",
-		"react": "^16.13.1",
-		"react-native": "^0.61.5",
 		"react-native-gesture-handler": "^1.6.1",
 		"react-native-iap": "^4.4.0",
 		"react-native-paper": "3.6.0",
 		"react-native-safe-area-context": "^0.7.3",
 		"react-native-safe-area-view": "^1.0.0",
+		"react-native-screens": "2.4.0",
+		"react-native-vector-icons": "6.6.0",
 		"react-navigation": "^4.3.3",
 		"react-navigation-header-buttons": "^3.0.5",
 		"react-navigation-stack": "^2.3.6",
