--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@humblebots/tip-jar-component",
-	"version": "1.0.6",
+	"version": "1.0.7",
 	"private": false,
 	"description": "",
 	"main": "index.ts",
@@ -16,17 +16,7 @@
 		"url": "https://github.com/humblebots/tip-jar-component/issues"
 	},
 	"homepage": "https://github.com/humblebots/tip-jar-component#readme",
-	"peerDependencies": {
-		"@types/react": "^16.9.25",
-		"@types/react-native": "^0.61.23",
-		"lottie-ios": "^3.1.3",
-		"lottie-react-native": "^3.3.2",
-		"react": "^16.13.1",
-		"react-native": "^0.61.5",
-		"react-native-iap": "^4.4.0",
-		"react-native-paper": "3.6.0",
-		"yarn": "^1.21.1"
-	},
+	"peerDependencies": {},
 	"dependencies": {
 		"@types/react": "^16.9.25",
 		"@types/react-native": "^0.61.23",
