--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "@humblebots/tip-jar-component",
-	"version": "1.0.8",
+	"version": "1.0.9",
+	"license": "MIT",
 	"private": false,
 	"description": "",
 	"main": "index.ts",
@@ -17,22 +18,21 @@
 	},
 	"homepage": "https://github.com/humblebots/tip-jar-component#readme",
 	"peerDependencies": {},
-	"dependencies": {
+	"dependencies": {},
+	"devDependencies": {
+		"@babel/core": "^7.8.3",
+		"@babel/runtime": "^7.8.3",
+		"@react-native-community/eslint-config": "^0.0.6",
 		"@types/react": "^16.9.25",
 		"@types/react-native": "^0.61.23",
+		"eslint": "^6.8.0",
 		"lottie-ios": "^3.1.3",
 		"lottie-react-native": "^3.3.2",
+		"metro-react-native-babel-preset": "^0.58.0",
 		"react": "^16.13.1",
 		"react-native": "^0.61.5",
 		"react-native-iap": "^4.4.0",
 		"react-native-paper": "3.6.0",
 		"yarn": "^1.21.1"
-	},
-	"devDependencies": {
-		"@babel/core": "^7.8.3",
-		"@babel/runtime": "^7.8.3",
-		"@react-native-community/eslint-config": "^0.0.6",
-		"eslint": "^6.8.0",
-		"metro-react-native-babel-preset": "^0.58.0"
 	}
 }
